force-app/main/default/objects/Testimonial__c/fields/Client_Login_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Login_Code__c</fullName>
    <formula>Fulfillment__r.Login_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Login Code</label>
    <type>Text</type>
</CustomField>