force-app/main/default/objects/Testimonial__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>