force-app/main/default/objects/Testimonial__c/fields/Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is automatically checked by workflow rules once the client email alert has been sent.</description>
    <inlineHelpText>This box is automatically checked by workflow rules once the client email alert has been sent.</inlineHelpText>
    <label>Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>