force-app/main/default/objects/Testimonial__c/fields/From_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>From_Survey_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the testimonial is from a survey response (not collected from zillow or other)</description>
    <inlineHelpText>Checked when the testimonial is from a survey response (not collected from zillow or other)</inlineHelpText>
    <label>From Survey Response</label>
    <type>Checkbox</type>
</CustomField>