force-app/main/default/objects/Testimonial__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>Testimonials</relationshipLabel>
    <relationshipName>Testimonials</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>