force-app/main/default/objects/Testimonial__c/fields/Fulfillment_Social_Post_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Social_Post_Sharing__c</fullName>
    <description>Sharing Service Status from Fulfillment</description>
    <formula>TEXT(Fulfillment__r.Social_Post_Share_Service_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sharing Service Status from Fulfillment</inlineHelpText>
    <label>Fulfillment Social Post Sharing</label>
    <type>Text</type>
</CustomField>