force-app/main/default/objects/Testimonial__c/fields/Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Status__c</fullName>
    <formula>TEXT(Fulfillment__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fulfillment Status</label>
    <type>Text</type>
</CustomField>