force-app/main/default/objects/Testimonial__c/fields/Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Image_Location__c</fullName>
    <label>Image Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>