force-app/main/default/objects/Testimonial__c/fields/Managed_Social_Media_Platform__c.field-meta.xml
<CustomField>
    <fullName>Managed_Social_Media_Platform__c</fullName>
    <description>Managed social media platform from fulfillment</description>
    <formula>TEXT(Fulfillment__r.Managed_Social_Media_Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Managed social media platform from fulfillment</inlineHelpText>
    <label>Managed Social Media Platform</label>
    <type>Text</type>
</CustomField>