force-app/main/default/objects/Testimonial__c/fields/Posted_to_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Posted_to_Social_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked when testimonial is posted or scheduled to be posted to client&apos;s social media</description>
    <inlineHelpText>Box is checked when testimonial is posted or scheduled to be posted to client&apos;s social media</inlineHelpText>
    <label>Posted to Social Media</label>
    <type>Checkbox</type>
</CustomField>