force-app/main/default/objects/Testimonial__c/fields/Preview__c.field-meta.xml
<CustomField>
    <fullName>Preview__c</fullName>
    <label>Preview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>