force-app/main/default/objects/Testimonial__c/fields/Primary_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Primary_Recipient__c</fullName>
    <formula>Fulfillment__r.Full_Name__c</formula>
    <label>Primary Recipient</label>
    <type>Text</type>
</CustomField>