force-app/main/default/objects/Testimonial__c/fields/Social_Media_Account__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Account__c</fullName>
    <description>Testimonial_Display_Social_Media__c from fulfillment</description>
    <formula>Fulfillment__r.Testimonial_Display_Social_Media__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Testimonial Display Social Media from fulfillment</inlineHelpText>
    <label>Social Media Account</label>
    <type>Text</type>
</CustomField>