force-app/main/default/objects/Testimonial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Fulfillment__c</columns>
    <columns>NAME</columns>
    <columns>Landing_Page__c</columns>
    <columns>Contact__c</columns>
    <columns>Primary_Recipient__c</columns>
    <columns>Fulfillment_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>