force-app/main/default/objects/Testimonial__c/listViews/Testimonials_Posted.listView-meta.xml
<ListView>
    <fullName>Testimonials_Posted</fullName>
    <columns>NAME</columns>
    <columns>Fulfillment__c</columns>
    <columns>Primary_Recipient__c</columns>
    <columns>Posted_to_Social_Media__c</columns>
    <columns>Image_Location__c</columns>
    <columns>Preview__c</columns>
    <columns>Text__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Landing_Page__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fulfillment_Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Posted_to_Social_Media__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </filters>
    <filters>
        <field>Publish_Date__c</field>
        <operation>greaterThan</operation>
        <value>9/6/2021</value>
    </filters>
    <label>Testimonials Posted to Social Media</label>
</ListView>