force-app/main/default/objects/Testimonial__c/listViews/Testimonials_to_Post.listView-meta.xml
<ListView>
    <fullName>Testimonials_to_Post</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Fulfillment__c</columns>
    <columns>Primary_Recipient__c</columns>
    <columns>Managed_Social_Media_Platform__c</columns>
    <columns>Social_Media_Account__c</columns>
    <columns>Posted_to_Social_Media__c</columns>
    <columns>Image_Location__c</columns>
    <columns>Preview__c</columns>
    <columns>Text__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Landing_Page__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fulfillment_Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled,product created,in progress</value>
    </filters>
    <filters>
        <field>Posted_to_Social_Media__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Fulfillment_Social_Post_Sharing__c</field>
        <operation>contains</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Publish_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:45</value>
    </filters>
    <label>Testimonials to Post</label>
</ListView>